# florp

./: .gitignore  README.md  pyproject.toml
florp/: florp.py  markdown_checklist.py
florp/templates/: template.html
florp/templates/css/: code_style.css  style.css
florp/templates/js/: reload.js
tests/: test_florp.py
